test/files/neg/t6359.check
t6359.scala:3: error: value class may not have nested module definitions
      object X
             ^
t6359.scala:4: error: value class may not have nested class definitions
      class Y
            ^
two errors found
